# ona-jetbrains-gitpod

./: .dockerignore  .gitignore  .gitpod.yml  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.github/: COPILOT_USAGE.md  copilot-instructions.md
.github/agents/: devops.md  docs.md  nodejs-dev.md  python-dev.md
.github/workflows/: ai-code-review.yml  auto-merge.yml
backend/api/: Dockerfile  pyproject.toml  requirements.txt
backend/api/app/: __init__.py  config.py  llm.py  logging_config.py  main.py  models.py
backend/api/tests/: __init__.py  test_config.py  test_health.py  test_llm_openai_placeholder.py  test_llm_stub.py
backend/node/: .eslintrc.json  Dockerfile  README-NODE.md  jest.config.js  package-lock.json  package.json
backend/node/src/: config.ts  index.ts  logging.ts
backend/node/src/routes/: health.ts  info.ts  llm.ts
backend/node/tests/: api.test.ts
examples/: .gitignore  DATABASE_INTEGRATION.md  IMPROVEMENTS.md  README.md  TESTING_GUIDE.md
examples/devops/: DEPLOYMENT_GUIDE.md  Dockerfile.nodejs  Dockerfile.python  docker-compose.yml  init-db.sql  kubernetes-deployment.yaml  nginx.conf
examples/nodejs/: express_example.ts  package.json  tsconfig.json
examples/python/: fastapi_example.py  requirements.txt
sample/: trivial.py
