[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ona-backend-api"
version = "0.1.0"
description = "Production-ready FastAPI backend service for Ona JetBrains + Gitpod Environment"
readme = "../../README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Ona Development Team"}
]
keywords = ["fastapi", "api", "backend", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "pydantic==2.9.0",
    "pydantic-settings==2.5.0",
    "httpx==0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
